fix: getModules
